--- a/src/Resources/Styles/app.css
+++ b/src/Resources/Styles/app.css
@@ -2,14 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+.button {
+  @apply px-5 py-2 font-bold shadow rounded-sm outline-none
+}
+
 .button-primary {
-  @apply bg-sky-400 hover:bg-sky-500 active:bg-sky-600 px-5 py-2 text-white font-bold shadow rounded-sm;
+  @apply button bg-sky-400 hover:bg-sky-500 active:bg-sky-600 text-white;
 }
 
 .button-success {
-  @apply bg-emerald-400 hover:bg-emerald-500 active:bg-emerald-600 px-5 py-2 text-white font-bold shadow rounded-sm;
+  @apply button bg-emerald-400 hover:bg-emerald-500 active:bg-emerald-600 text-white;
 }
 
 .button-cancel {
-  @apply bg-red-500 hover:bg-red-600 active:bg-red-700 px-5 py-2 text-white font-bold shadow rounded-sm;
+  @apply button bg-red-500 hover:bg-red-600 active:bg-red-700 text-white;
 }
