--- a/src/Resources/Views/InertiaApp.edge
+++ b/src/Resources/Views/InertiaApp.edge
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://rsms.me/inter/inter.css" rel="stylesheet"/>
-	<link href="{{mix('app.css')}}" rel="stylesheet"/>
+	 <link href="{{mix('app.css')}}" rel="stylesheet"/>
+	 <!--<link href="http://localhost:8081/assets/app.css" rel="stylesheet" />-->
 
     <title>Welcome</title>
 </head>
@@ -13,5 +14,6 @@
 	</div>
 
 	<script src="{{mix('app.js')}}"></script>
+	<!--<script src="http://localhost:8081/assets/app.js"></script>-->
 </body>
 </html>
