* loading spinner; page titles;

--- a/src/Resources/Views/InertiaApp.edge
+++ b/src/Resources/Views/InertiaApp.edge
@@ -7,7 +7,7 @@
 	 <link href="{{mix('app.css')}}" rel="stylesheet"/>
 	 <!--<link href="http://localhost:8081/assets/app.css" rel="stylesheet" />-->
 
-    <title>Welcome</title>
+    <!--<title>Welcome</title>-->
 </head>
 <body class="bg-gray-100">
 	<div id="app" data-page="{{page}}"></div>
